fixed comment box height on larger screens being clipped

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,6 +236,7 @@ body {
 	/* comment display */
 	#comment-display {
 		overflow-y: visible;
+		height: 100%;
 		min-height: 150px;
 	}
 
